# near-no-std-template

./: Cargo.toml  README.md  setup.sh
src/: lib.rs  utils.rs
